layout list reservasi dan pemesanan di admin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,6 @@
     <string name="txtjumlah">Jumlah Pesanan</string>
     <string name="txtpesan">Pesan</string>
     <string name="txttotal">Total Harga</string>
-
+    <string name="viewpesan">Data Pemesanan</string>
 
 </resources>
